--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shopping Cart</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple Shopping Cart</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Shopping Cart</h1>
-    <div id="product-list" class="product-list"></div>
-    <h2>Cart</h2>
-    <div id="cart" class="cart"></div>
-    <button id="checkout-button">Checkout</button>
-    <p id="total-bill"></p>
-  </div>
+
+  <h1>🛒 Simple Shopping Cart</h1>
+
+  <div id="products"></div>
+
+  <h2>Cart</h2>
+  <div id="cart"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
